--- a/index.html
+++ b/index.html
@@ -91,9 +91,12 @@
     }
 
 </script>
-<script async defer
+<script async defer type='text/javascript'
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAyWxuLDi5aIxMGqATA74uLx4huY1uF4hg&v=3&callback=initMap">
 </script>
+
+`<script  async defer type='text/javascript'
+         src='/bower_components/knockout/dist/knockout.debug.js'></script>`
 
 </body>
 </html>
