define data model of geo-location

--- a/index.html
+++ b/index.html
@@ -9,19 +9,6 @@
     <!-- Bootstrap -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="dist/css/app.min.css" rel="stylesheet">
-
-    <style>
-        .eq-height {
-            display: flex;
-            flex-wrap: wrap;
-        }
-
-        .eq-height > div[class*='col-'] {
-            display: flex;
-            flex-direction: column;
-        }
-
-    </style>
 </head>
 <body>
 <div id="wrapper">
@@ -48,7 +35,7 @@
                 </div>
 
             </div>
-            <div class="row canvas">
+            <div class="row">
                 <div class="col-lg-12">
                     <div id="map-canvas"></div>
                 </div>
