--- a/index.html
+++ b/index.html
@@ -15,29 +15,22 @@
     <!-- Sidebar -->
     <div id="sidebar-wrapper">
         <div class="container-fluid">
-            <div class="row">
-
-            </div><!-- /.row -->
         </div>
     </div>
     <!-- /#sidebar-wrapper -->
     <!-- Page Content -->
     <div id="page-content-wrapper">
         <div class="container-fluid">
-            <div class="row eq-height">
-                <div class="col-xs-6 col-md-4 col-lg-2">
-                    <a href="#menu-toggle" id="menu-toggle">
-                        <span class="glyphicon glyphicon-menu-hamburger"></span>
-                    </a>
-                </div>
-                <div class="col-xs-6 col-md-8 col-lg-10">
-                    <h3 class="page-header text-center">街区地图</h3>
-                </div>
-
-            </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <div id="map-canvas"></div>
+                    <div class="toogle-icon">
+                        <a href="#menu-toggle" id="menu-toggle">
+                            <span class="glyphicon glyphicon-menu-hamburger"></span>
+                        </a>
+                    </div>
+                    <div id="map-canvas">
+
+                    </div>
                 </div>
             </div>
 
@@ -46,7 +39,6 @@
     <!-- /#page-content-wrapper -->
 </div>
 <!-- /#wrapper -->
-
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -62,9 +54,6 @@
 <script src="dist/js/bundle.model.min.js"></script>
 <script src="dist/js/bundle.view.min.js"></script>
 <script src="dist/js/bundle.vm.min.js"></script>
-<script>
-
-</script>
 <script async defer type='text/javascript'
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAyWxuLDi5aIxMGqATA74uLx4huY1uF4hg&v=3&callback=initMap">
 </script>
