--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Neighborhood on GoogleMap</title>
     <!-- Bootstrap -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="dist/css/easy-autocomplete.min.css" rel="stylesheet" type="text/css">
     <link href="dist/css/app.min.css" rel="stylesheet">
 </head>
 <body>
@@ -15,6 +16,11 @@
     <!-- Sidebar -->
     <div id="sidebar-wrapper">
         <div class="container-fluid">
+            <div class="row">
+            <div  class="col-lg-12" class="searchbox-col">
+                <input id="location-search" />
+            </div>
+            </div>
         </div>
     </div>
     <!-- /#sidebar-wrapper -->
@@ -47,13 +53,17 @@
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="bower_components/jquery-migrate/jquery-migrate.min.js"></script>
+
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="dist/js/bundle.app.min.js"></script>
-<script src="dist/js/bundle.common.min.js"></script>
-<script src="dist/js/bundle.model.min.js"></script>
-<script src="dist/js/bundle.view.min.js"></script>
-<script src="dist/js/bundle.vm.min.js"></script>
+<script src="bower_components/knockout/dist/knockout.debug.js"></script>
+<script src="dist/js/jquery.easy-autocomplete.min.js" type="text/javascript" ></script>
+<script src="dist/js/common.bundle.js"></script>
+<script src="dist/js/model.bundle.js"></script>
+<script src="dist/js/view.bundle.js"></script>
+<script src="dist/js/vm.bundle.js"></script>
+<script src="dist/js/app.bundle.js"></script>
 <script async defer type='text/javascript'
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAyWxuLDi5aIxMGqATA74uLx4huY1uF4hg&v=3&callback=initMap">
 </script>
