add jquery-autocomplete onto left sliding-panel

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="sidebar-wrapper">
         <div class="container-fluid">
             <div class="row">
-            <div  class="col-lg-12" class="searchbox-col">
+            <div  class="col-lg-12 searchbox-row">
                 <input id="location-search" />
             </div>
             </div>
