ensure page responsive layout

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="sidebar-wrapper">
         <div class="container-fluid">
             <div class="row">
-            <div  class="col-lg-12 searchbox-row">
+            <div  class="col-lg-8 searchbox-row">
                 <input id="location-search" />
             </div>
             </div>
@@ -28,18 +28,21 @@
     <div id="page-content-wrapper">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-3">
                     <div class="toogle-icon">
                         <a href="#menu-toggle" id="menu-toggle">
                             <span class="glyphicon glyphicon-menu-hamburger"></span>
                         </a>
                     </div>
-                    <div id="map-canvas">
-
                     </div>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-lg-12">
+                    <div id="map-canvas">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <!-- /#page-content-wrapper -->
