add page header on to the right sliding panel

--- a/index.html
+++ b/index.html
@@ -27,14 +27,16 @@
     <!-- Page Content -->
     <div id="page-content-wrapper">
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-3">
+            <div class="row page-header">
+                <div class="col-lg-1">
                     <div class="toogle-icon">
                         <a href="#menu-toggle" id="menu-toggle">
                             <span class="glyphicon glyphicon-menu-hamburger"></span>
                         </a>
                     </div>
-                    </div>
+                </div>
+                <div class="col-lg-11">
+                    <h1 class="text-center">街区地图</h1>
                 </div>
             </div>
             <div class="row">
@@ -43,6 +45,8 @@
                     </div>
                 </div>
             </div>
+            </div>
+
         </div>
     </div>
     <!-- /#page-content-wrapper -->
