--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="container-fluid">
             <div class="row page-header">
                 <div class="col-lg-1">
-                    <div class="toogle-icon">
+                    <div class="text-center">
                         <a href="#menu-toggle" id="menu-toggle">
                             <span class="glyphicon glyphicon-menu-hamburger"></span>
                         </a>
