--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
     <div id="page-content-wrapper">
         <div class="container-fluid">
             <div class="row page-header">
-                <div class="col-lg-1">
+                <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
                     <div class="text-center">
                         <a href="#menu-toggle" id="menu-toggle">
                             <span class="glyphicon glyphicon-menu-hamburger"></span>
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-11">
+                <div class="col-xs-11 col-sm-11 col-md-11 col-lg-11">
                     <h1 class="text-center">街区地图</h1>
                 </div>
             </div>
