--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>
                 </div>
                 <div class="col-xs-11 col-sm-11 col-md-11 col-lg-11">
-                    <h1 class="text-center">街区地图</h1>
+                    <h1 class="text-center top-title">街区地图</h1>
                 </div>
             </div>
             <div class="row">
