add text filtering on the geo-location unordered list

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="row">
                 <div  class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <div class="input-group">
-                        <input id="location-search" class="form-control">
+                        <input id="location-search" class="form-control" data-bind="textInput: searchText">
                         <span class="input-group-addon">
                             <i class="glyphicon glyphicon-search"></i>
                         </span>
@@ -51,7 +51,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <ul class="list-group" data-bind="foreach :locations">
+                        <ul class="list-group" data-bind="foreach :locationsFiltered">
                             <li class="list-group-item" data-bind="text: title"></li>
                         </ul>
                 </div>
