add click event handler for list item on the left panel

--- a/index.html
+++ b/index.html
@@ -51,8 +51,12 @@
             </div>
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <ul class="list-group" data-bind="foreach :locationsFiltered">
-                            <li class="list-group-item" data-bind="text: title"></li>
+                        <ul class="list-group" data-bind="foreach :markersFiltered">
+                            <li class="list-group-item"
+                                data-bind="text:title, event:{ click: $parent.alertMarker },
+                                      css:{ 'list-group-item active' : $parent.currentMarker() ? title === $parent.currentMarker().title : false,
+                                            'list-group-item' : true
+                                       }"></li>
                         </ul>
                 </div>
             </div>
