--- a/index.html
+++ b/index.html
@@ -66,20 +66,17 @@
     <!-- Page Content -->
     <div id="page-content-wrapper">
         <div class="container-fluid">
-            <div class="row page-header">
+            <div class="row">
                 <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
-                    <div class="text-center">
-                        <a href="#menu-toggle" id="menu-toggle">
+                    <div class="text-center menu-tootgle">
+                        <a href="#menu-toggle" id="menu-toggle" title="Click and toggle the Left panel">
                             <span class="glyphicon glyphicon-menu-hamburger"></span>
                         </a>
                     </div>
                 </div>
-                <div class="col-xs-11 col-sm-11 col-md-11 col-lg-11">
-                    <h1 class="text-center">街区地图</h1>
-                </div>
             </div>
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-12 map-container">
                     <div id="map-canvas">
                     </div>
                 </div>
