--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
 
-<script async defer type='text/javascript'
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAyWxuLDi5aIxMGqATA74uLx4huY1uF4hg&v=3&callback=initMap">
-</script>
-
+<!--
+导入百度地图
+-->
+<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=HW1hgQNz18TYRRn7BjN6BOMALz6h5G1C"></script>
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/knockout/dist/knockout.debug.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
